testsuite/tests/polykinds/T16244.stderr

T16244.hs:11:18: error:
    • Expected kind ‘k’, but ‘b’ has kind ‘k1’
      ‘k1’ is a rigid type variable bound by
        the class declaration for ‘C’
        at T16244.hs:11:26
      ‘k’ is a rigid type variable bound by
        the class declaration for ‘C’
        at T16244.hs:11:1-52
    • In the second argument of ‘SameKind’, namely ‘b’
      In the class declaration for ‘C’
